<resources>
    <string name="app_name">android_ipc</string>
    <string name="new_process">New Process</string>
    <string name="binder">Binder</string>
    <string name="messenger">Messenger</string>
    <string name="content_provider">Content Provider</string>
    <string name="aidl">AIDL</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="query">Query</string>
    <string name="get">Get</string>
    <string name="send">Send</string>
</resources>